--- a/index.html
+++ b/index.html
@@ -5,224 +5,256 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>7elm Dream Card</title>
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
+    @keyframes flickerBorder {
+      0%, 100% { border-color: #9ACA3C; }
+      50% { border-color: #c4f16c; }
     }
 
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center; /* vertical centering */
+      margin: 0;
+      padding: 0 20px 0 20px;
       background: url('https://cdn.shopify.com/s/files/1/0811/3356/8288/files/code_template.jpg?v=1748554334') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Arial', sans-serif;
       color: #9ACA3C;
-      /* prevent scrolling */
-      overflow: hidden;
-      padding: 20px; /* some breathing room on very small screens */
-      box-sizing: border-box;
-      min-height: 100vh;
-      min-width: 100vw;
-    }
 
-    /* Frame container exactly inside the frame */
-    .frame-container {
-      width: 860px;  /* Adjust width to fit inside your frame */
-      height: 570px; /* Adjust height to fit inside your frame */
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 15px;
-      box-sizing: border-box;
-      padding: 30px;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      overflow-y: auto;
-      /* Add subtle shadow/glow to separate from background */
-      box-shadow: 0 0 20px 5px rgba(154, 202, 60, 0.5);
+      align-items: center;        /* horizontally center */
+      justify-content: flex-start; /* align from top */
+      padding-top: 140px;          /* push content down */
+      min-height: 100vh;
+      box-sizing: border-box;
     }
 
     nav {
       display: flex;
-      justify-content: center;
-      gap: 40px;
-      margin-bottom: 30px;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+      margin-top: 30px;
+      user-select: none;
     }
 
     nav a {
       color: #9ACA3C;
       text-decoration: none;
-      font-size: 1.3rem;
+      font-size: 1.5rem;
       font-weight: bold;
       cursor: pointer;
-      transition: text-shadow 0.3s ease;
+      position: relative;
+      padding-bottom: 4px;
+      transition: all 0.3s ease;
     }
 
     nav a:hover,
-    nav a.active-link {
-      text-shadow: 0 0 8px #9ACA3C;
+    nav a.active {
+      text-shadow: 0 0 12px #9ACA3C;
+      color: #c4f16c;
+    }
+    nav a.active::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 3px;
+      width: 100%;
+      background: #9ACA3C;
+      box-shadow:
+        0 0 8px #9ACA3C,
+        0 0 12px #9ACA3C,
+        0 0 20px #c4f16c;
+      border-radius: 2px;
+      animation: flickerBorder 2s infinite;
     }
 
     section {
       display: none;
       opacity: 0;
       transition: opacity 0.5s ease-in-out;
-      flex: 1 1 auto;
-      overflow-y: auto;
+      max-width: 900px;
+      text-align: center;
+      margin-top: 40px;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 12px;
       color: #9ACA3C;
+      box-sizing: border-box;
     }
 
-    section.active {
+    .active {
       display: block;
       opacity: 1;
     }
 
     .video-container {
       position: relative;
-      padding-bottom: 56.25%; /* 16:9 */
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
       height: 0;
       overflow: hidden;
-      margin-top: 15px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(154, 202, 60, 0.7);
+      margin-top: 20px;
     }
 
     .video-container iframe {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       border: none;
-      border-radius: 10px;
     }
 
     .collab-cards {
       display: flex;
       flex-wrap: wrap;
-      gap: 15px;
+      gap: 20px;
       justify-content: center;
-      margin-top: 20px;
-      overflow-y: auto;
-      max-height: 400px;
+      margin-top: 30px;
     }
 
     .collab-card {
-      background-color: rgba(0,0,0,0.7);
-      border: 1px solid #9ACA3C;
-      border-radius: 10px;
-      padding: 12px;
-      width: 240px;
+      background-color: rgba(17, 17, 17, 0.8);
+      border: 1.5px solid #9ACA3C;
+      border-radius: 12px;
+      padding: 20px;
+      width: 250px;
+      text-align: left;
       color: #9ACA3C;
       box-sizing: border-box;
-      text-align: left;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      animation: flickerBorder 4s infinite alternate;
+    }
+
+    .collab-card:hover {
+      box-shadow:
+        0 0 8px #9ACA3C,
+        0 0 16px #9ACA3C,
+        0 0 24px #c4f16c;
+      border-color: #c4f16c;
+      transform: translateY(-5px);
     }
 
     .collab-card img {
       width: 100%;
       border-radius: 8px;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
+      object-fit: cover;
+      height: 150px;
     }
 
     .collab-card h4 {
-      margin: 6px 0 4px;
+      margin: 10px 0 5px;
     }
 
     .collab-card p {
-      margin: 3px 0;
-      font-size: 0.85rem;
+      margin: 5px 0;
+      font-size: 0.9rem;
+      line-height: 1.3;
     }
 
-    /* Scrollbar for overflow */
-    .frame-container::-webkit-scrollbar {
-      width: 8px;
-    }
-
-    .frame-container::-webkit-scrollbar-thumb {
-      background: #9ACA3C;
-      border-radius: 4px;
-    }
-
-    /* Mobile responsiveness */
-    @media (max-width: 900px) {
-      .frame-container {
-        width: 100%;
-        height: auto;
-        max-height: 90vh;
-        padding: 20px;
+    /* Mobile Responsive */
+    @media (max-width: 768px) {
+      body {
+        padding: 120px 15px 40px 15px;
       }
+
       nav {
-        flex-wrap: wrap;
         gap: 20px;
       }
+
       nav a {
-        font-size: 1rem;
+        font-size: 1.3rem;
+        padding-bottom: 6px;
       }
-      .collab-cards {
-        max-height: none;
-        flex-direction: column;
-        align-items: center;
+
+      section {
+        margin-top: 30px;
+        padding: 15px;
       }
+
       .collab-card {
         width: 100%;
-        max-width: 320px;
+        max-width: 350px;
+        padding: 15px;
+      }
+
+      .video-container {
+        margin-top: 15px;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="frame-container">
-    <nav>
-      <a href="#" class="active-link" onclick="showSection('hidden', event)">1. Hidden Message & Video</a>
-      <a href="#" onclick="showSection('collabs', event)">2. Collabs & Our World</a>
-      <a href="#" onclick="showSection('vision', event)">3. The Vision</a>
-    </nav>
+  <nav>
+    <a class="active" onclick="showSection('hidden', this)">1. Hidden Message & Video</a>
+    <a onclick="showSection('collabs', this)">2. Collabs & Our World</a>
+    <a onclick="showSection('vision', this)">3. The Vision</a>
+  </nav>
 
-    <section id="hidden" class="active">
-      <h2>The Hidden Story</h2>
-      <p>Behind every Dream Card is a message — this is for those who refused to be ordinary.</p>
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+  <section id="hidden" class="active">
+    <h2>The Hidden Story</h2>
+    <p>Behind every Dream Card is a message — this is for those who refused to be ordinary.</p>
+    <div class="video-container">
+      <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <section id="collabs">
+    <h2>Our Collabs & Other World</h2>
+    <p>With your Dream Card, you access more than fashion. Collaborations with bold brands. Entry to private drops. Invitations to our events. Welcome to the other world.</p>
+    <div class="collab-cards">
+      <!-- 10 placeholder collab cards -->
+      <div class="collab-card">
+        <img src="https://via.placeholder.com/250x150?text=Brand+1" alt="Brand Logo 1">
+        <h4>Brand Name 1</h4>
+        <p><strong>Location:</strong> Cairo, Egypt</p>
+        <p><strong>Contact:</strong> +20 111 222 3333</p>
+        <p><strong>Instagram:</strong> @brand1</p>
       </div>
-    </section>
-
-    <section id="collabs">
-      <h2>Our Collabs & Other World</h2>
-      <p>With your Dream Card, you access more than fashion. Collaborations with bold brands. Entry to private drops. Invitations to our events. Welcome to the other world.</p>
-      <div class="collab-cards">
-        <!-- example cards -->
-        <div class="collab-card">
-          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
-          <h4>Brand Name 1</h4>
-          <p><strong>Location:</strong> Cairo, Egypt</p>
-          <p><strong>Contact:</strong> +20 123 456 7890</p>
-          <p><strong>Instagram:</strong> @brand1</p>
-        </div>
-        <!-- add more cards as needed -->
+      <div class="collab-card">
+        <img src="https://via.placeholder.com/250x150?text=Brand+2" alt="Brand Logo 2">
+        <h4>Brand Name 2</h4>
+        <p><strong>Location:</strong> Alexandria, Egypt</p>
+        <p><strong>Contact:</strong> +20 222 333 4444</p>
+        <p><strong>Instagram:</strong> @brand2</p>
       </div>
-    </section>
-
-    <section id="vision">
-      <h2>The Vision of 7elm</h2>
-      <p>We don’t sell clothes. We sell belief. Movement. Identity. Every thread you wear is part of a dream louder than the world itself.</p>
-    </section>
-  </div>
-
-  <script>
-    function showSection(id, event) {
-      event.preventDefault();
-      document.querySelectorAll('nav a').forEach(link => link.classList.remove('active-link'));
-      event.currentTarget.classList.add('active-link');
-
-      document.querySelectorAll('section').forEach(section => {
-        section.classList.remove('active');
-        section.style.display = 'none';
-      });
-
-      const activeSection = document.getElementById(id);
-      activeSection.style.display = 'block';
-      setTimeout(() => activeSection.classList.add('active'), 10);
-    }
-  </script>
-
-</body>
-</html>
+      <div class="collab-card">
+        <img src="https://via.placeholder.com/250x150?text=Brand+3" alt="Brand Logo 3">
+        <h4>Brand Name 3</h4>
+        <p><strong>Location:</strong> Giza, Egypt</p>
+        <p><strong>Contact:</strong> +20 333 444 5555</p>
+        <p><strong>Instagram:</strong> @brand3</p>
+      </div>
+      <div class="collab-card">
+        <img src="https://via.placeholder.com/250x150?text=Brand+4" alt="Brand Logo 4">
+        <h4>Brand Name 4</h4>
+        <p><strong>Location:</strong> Luxor, Egypt</p>
+        <p><strong>Contact:</strong> +20 444 555 6666</p>
+        <p><strong>Instagram:</strong> @brand4</p>
+      </div>
+      <div class="collab-card">
+        <img src="https://via.placeholder.com/250x150?text=Brand+5" alt="Brand Logo 5">
+        <h4>Brand Name 5</h4>
+        <p><strong>Location:</strong> Aswan, Egypt</p>
+        <p><strong>Contact:</strong> +20 555 666 7777</p>
+        <p><strong>Instagram:</strong> @brand5</p>
+      </div>
+      <div class="collab-card">
+        <img src="https://via.placeholder.com/250x150?text=Brand+6" alt="Brand Logo 6">
+        <h4>Brand Name 6</h4>
+        <p><strong>Location:</strong> Sharm El Sheikh, Egypt</p>
+        <p><strong>Contact:</strong> +20 666 777 8888</p>
+        <p><strong>Instagram:</strong> @brand6</p>
+      </div>
+      <div class="collab-card">
+        <img src="https://via.placeholder.com/250x150?text=Brand+7" alt="Brand Logo 7">
+        <h4>Brand Name 7</h4>
+        <p><strong>Location:</strong> Hurghada, Egypt</p>
+        <p><strong>Contact:</strong> +20 777 888 9999</p>
+        <p><strong>Instagram:</strong> @brand7</p>
+      </div>
+      <div class="collab-card">
+        <img src="https://via.placeholder.com/250x150?text=Brand+8" alt="Brand Logo 
