--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>7elm Dream Card</title>
   <style>
-    @keyframes flickerBorder {
-      0%, 100% { border-color: #9ACA3C; }
-      50% { border-color: #c4f16c; }
-    }
-
     body {
       margin: 0;
-      padding: 0 20px 0 20px;
-      background: url('https://cdn.shopify.com/s/files/1/0811/3356/8288/files/code_template.jpg?v=1748554334') no-repeat center center fixed;
+      padding: 0;
+      background: url('https://cdn.shopify.com/s/files/1/0811/3356/8288/files/story_template_different_frame.jpg?v=1748552562') no-repeat center center fixed;
       background-size: cover;
-      font-family: 'Arial', sans-serif;
       color: #9ACA3C;
-
+      font-family: 'Arial', sans-serif;
       display: flex;
-      flex-direction: column;
-      align-items: center;        /* horizontally center */
-      justify-content: flex-start; /* align from top */
-      padding-top: 140px;          /* push content down */
+      justify-content: flex-start;
       min-height: 100vh;
+    }
+
+    /* Container to keep content inside the frame */
+    .frame-container {
+      max-width: 900px;
+      margin: 40px auto 60px;
+      padding: 20px 30px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 12px;
       box-sizing: border-box;
+      width: 100%;
     }
 
     nav {
@@ -32,8 +33,7 @@
       flex-direction: column;
       align-items: center;
       gap: 30px;
-      margin-top: 30px;
-      user-select: none;
+      margin-top: 0; /* margin inside container now */
     }
 
     nav a {
@@ -41,31 +41,12 @@
       text-decoration: none;
       font-size: 1.5rem;
       font-weight: bold;
-      cursor: pointer;
-      position: relative;
-      padding-bottom: 4px;
       transition: all 0.3s ease;
+      cursor: pointer;
     }
 
-    nav a:hover,
-    nav a.active {
-      text-shadow: 0 0 12px #9ACA3C;
-      color: #c4f16c;
-    }
-    nav a.active::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      height: 3px;
-      width: 100%;
-      background: #9ACA3C;
-      box-shadow:
-        0 0 8px #9ACA3C,
-        0 0 12px #9ACA3C,
-        0 0 20px #c4f16c;
-      border-radius: 2px;
-      animation: flickerBorder 2s infinite;
+    nav a:hover, nav a.active-link {
+      text-shadow: 0 0 10px #9ACA3C;
     }
 
     section {
@@ -76,13 +57,10 @@
       text-align: center;
       margin-top: 40px;
       padding: 20px;
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 12px;
       color: #9ACA3C;
-      box-sizing: border-box;
     }
 
-    .active {
+    section.active {
       display: block;
       opacity: 1;
     }
@@ -115,33 +93,18 @@
 
     .collab-card {
       background-color: rgba(17, 17, 17, 0.8);
-      border: 1.5px solid #9ACA3C;
+      border: 1px solid #9ACA3C;
       border-radius: 12px;
       padding: 20px;
       width: 250px;
       text-align: left;
       color: #9ACA3C;
-      box-sizing: border-box;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      animation: flickerBorder 4s infinite alternate;
-    }
-
-    .collab-card:hover {
-      box-shadow:
-        0 0 8px #9ACA3C,
-        0 0 16px #9ACA3C,
-        0 0 24px #c4f16c;
-      border-color: #c4f16c;
-      transform: translateY(-5px);
     }
 
     .collab-card img {
       width: 100%;
       border-radius: 8px;
       margin-bottom: 10px;
-      object-fit: cover;
-      height: 150px;
     }
 
     .collab-card h4 {
@@ -151,110 +114,154 @@
     .collab-card p {
       margin: 5px 0;
       font-size: 0.9rem;
-      line-height: 1.3;
     }
 
-    /* Mobile Responsive */
+    /* Mobile optimization */
     @media (max-width: 768px) {
-      body {
-        padding: 120px 15px 40px 15px;
+      .frame-container {
+        margin: 20px 15px 40px;
+        padding: 15px 20px;
       }
-
       nav {
         gap: 20px;
       }
-
       nav a {
         font-size: 1.3rem;
-        padding-bottom: 6px;
       }
-
-      section {
-        margin-top: 30px;
-        padding: 15px;
+      .collab-cards {
+        flex-direction: column;
+        align-items: center;
       }
-
       .collab-card {
         width: 100%;
-        max-width: 350px;
-        padding: 15px;
-      }
-
-      .video-container {
-        margin-top: 15px;
+        max-width: 320px;
       }
     }
   </style>
 </head>
 <body>
 
-  <nav>
-    <a class="active" onclick="showSection('hidden', this)">1. Hidden Message & Video</a>
-    <a onclick="showSection('collabs', this)">2. Collabs & Our World</a>
-    <a onclick="showSection('vision', this)">3. The Vision</a>
-  </nav>
+  <div class="frame-container">
+    <nav>
+      <a href="#" class="active-link" onclick="showSection('hidden', event)">1. Hidden Message & Video</a>
+      <a href="#" onclick="showSection('collabs', event)">2. Collabs & Our World</a>
+      <a href="#" onclick="showSection('vision', event)">3. The Vision</a>
+    </nav>
 
-  <section id="hidden" class="active">
-    <h2>The Hidden Story</h2>
-    <p>Behind every Dream Card is a message — this is for those who refused to be ordinary.</p>
-    <div class="video-container">
-      <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
-    </div>
-  </section>
+    <section id="hidden" class="active">
+      <h2>The Hidden Story</h2>
+      <p>Behind every Dream Card is a message — this is for those who refused to be ordinary.</p>
+      <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+      </div>
+    </section>
 
-  <section id="collabs">
-    <h2>Our Collabs & Other World</h2>
-    <p>With your Dream Card, you access more than fashion. Collaborations with bold brands. Entry to private drops. Invitations to our events. Welcome to the other world.</p>
-    <div class="collab-cards">
-      <!-- 10 placeholder collab cards -->
-      <div class="collab-card">
-        <img src="https://via.placeholder.com/250x150?text=Brand+1" alt="Brand Logo 1">
-        <h4>Brand Name 1</h4>
-        <p><strong>Location:</strong> Cairo, Egypt</p>
-        <p><strong>Contact:</strong> +20 111 222 3333</p>
-        <p><strong>Instagram:</strong> @brand1</p>
+    <section id="collabs">
+      <h2>Our Collabs & Other World</h2>
+      <p>With your Dream Card, you access more than fashion. Collaborations with bold brands. Entry to private drops. Invitations to our events. Welcome to the other world.</p>
+      <div class="collab-cards">
+        <!-- Example 10 collab cards with placeholder data -->
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 1</h4>
+          <p><strong>Location:</strong> Cairo, Egypt</p>
+          <p><strong>Contact:</strong> +20 123 456 7890</p>
+          <p><strong>Instagram:</strong> @brand1</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 2</h4>
+          <p><strong>Location:</strong> Alexandria, Egypt</p>
+          <p><strong>Contact:</strong> +20 987 654 3210</p>
+          <p><strong>Instagram:</strong> @brand2</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 3</h4>
+          <p><strong>Location:</strong> Giza, Egypt</p>
+          <p><strong>Contact:</strong> +20 456 789 1234</p>
+          <p><strong>Instagram:</strong> @brand3</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 4</h4>
+          <p><strong>Location:</strong> Luxor, Egypt</p>
+          <p><strong>Contact:</strong> +20 321 654 9870</p>
+          <p><strong>Instagram:</strong> @brand4</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 5</h4>
+          <p><strong>Location:</strong> Aswan, Egypt</p>
+          <p><strong>Contact:</strong> +20 789 123 4567</p>
+          <p><strong>Instagram:</strong> @brand5</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 6</h4>
+          <p><strong>Location:</strong> Sharm El Sheikh, Egypt</p>
+          <p><strong>Contact:</strong> +20 654 321 0987</p>
+          <p><strong>Instagram:</strong> @brand6</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 7</h4>
+          <p><strong>Location:</strong> Hurghada, Egypt</p>
+          <p><strong>Contact:</strong> +20 987 321 6540</p>
+          <p><strong>Instagram:</strong> @brand7</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 8</h4>
+          <p><strong>Location:</strong> Tanta, Egypt</p>
+          <p><strong>Contact:</strong> +20 123 789 4560</p>
+          <p><strong>Instagram:</strong> @brand8</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 9</h4>
+          <p><strong>Location:</strong> Mansoura, Egypt</p>
+          <p><strong>Contact:</strong> +20 321 987 6540</p>
+          <p><strong>Instagram:</strong> @brand9</p>
+        </div>
+        <div class="collab-card">
+          <img src="https://via.placeholder.com/250x150" alt="Brand Logo">
+          <h4>Brand Name 10</h4>
+          <p><strong>Location:</strong> Suez, Egypt</p>
+          <p><strong>Contact:</strong> +20 456 123 7890</p>
+          <p><strong>Instagram:</strong> @brand10</p>
+        </div>
       </div>
-      <div class="collab-card">
-        <img src="https://via.placeholder.com/250x150?text=Brand+2" alt="Brand Logo 2">
-        <h4>Brand Name 2</h4>
-        <p><strong>Location:</strong> Alexandria, Egypt</p>
-        <p><strong>Contact:</strong> +20 222 333 4444</p>
-        <p><strong>Instagram:</strong> @brand2</p>
-      </div>
-      <div class="collab-card">
-        <img src="https://via.placeholder.com/250x150?text=Brand+3" alt="Brand Logo 3">
-        <h4>Brand Name 3</h4>
-        <p><strong>Location:</strong> Giza, Egypt</p>
-        <p><strong>Contact:</strong> +20 333 444 5555</p>
-        <p><strong>Instagram:</strong> @brand3</p>
-      </div>
-      <div class="collab-card">
-        <img src="https://via.placeholder.com/250x150?text=Brand+4" alt="Brand Logo 4">
-        <h4>Brand Name 4</h4>
-        <p><strong>Location:</strong> Luxor, Egypt</p>
-        <p><strong>Contact:</strong> +20 444 555 6666</p>
-        <p><strong>Instagram:</strong> @brand4</p>
-      </div>
-      <div class="collab-card">
-        <img src="https://via.placeholder.com/250x150?text=Brand+5" alt="Brand Logo 5">
-        <h4>Brand Name 5</h4>
-        <p><strong>Location:</strong> Aswan, Egypt</p>
-        <p><strong>Contact:</strong> +20 555 666 7777</p>
-        <p><strong>Instagram:</strong> @brand5</p>
-      </div>
-      <div class="collab-card">
-        <img src="https://via.placeholder.com/250x150?text=Brand+6" alt="Brand Logo 6">
-        <h4>Brand Name 6</h4>
-        <p><strong>Location:</strong> Sharm El Sheikh, Egypt</p>
-        <p><strong>Contact:</strong> +20 666 777 8888</p>
-        <p><strong>Instagram:</strong> @brand6</p>
-      </div>
-      <div class="collab-card">
-        <img src="https://via.placeholder.com/250x150?text=Brand+7" alt="Brand Logo 7">
-        <h4>Brand Name 7</h4>
-        <p><strong>Location:</strong> Hurghada, Egypt</p>
-        <p><strong>Contact:</strong> +20 777 888 9999</p>
-        <p><strong>Instagram:</strong> @brand7</p>
-      </div>
-      <div class="collab-card">
-        <img src="https://via.placeholder.com/250x150?text=Brand+8" alt="Brand Logo 
+    </section>
+
+    <section id="vision">
+      <h2>The Vision of 7elm</h2>
+      <p>We don’t sell clothes. We sell belief. Movement. Identity. Every thread you wear is part of a dream louder than the world itself.</p>
+    </section>
+  </div>
+
+  <script>
+    function showSection(id, event) {
+      event.preventDefault();
+
+      // Remove active class from all nav links
+      document.querySelectorAll('nav a').forEach(link => link.classList.remove('active-link'));
+
+      // Add active class to clicked link
+      event.currentTarget.classList.add('active-link');
+
+      // Hide all sections
+      document.querySelectorAll('section').forEach(section => {
+        section.classList.remove('active');
+        section.style.display = 'none';
+      });
+
+      // Show active section
+      const activeSection = document.getElementById(id);
+      activeSection.style.display = 'block';
+      setTimeout(() => activeSection.classList.add('active'), 10);
+    }
+  </script>
+
+</body>
+</html>
